--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -13,7 +13,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: -webkit-fill-available;
     height: 100%;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 2rem;
